--- a/env/environment-facs-analysis.yml
+++ b/env/environment-facs-analysis.yml
@@ -1,46 +1,55 @@
-# Micromamba Environment for Compositional FACS Analysis
-# Workflow: ALDEx2 + Propeller for DA testing, Network analysis
-# R 4.3.x compatible with Bioconductor 3.18/3.19
-# Created: November 2025 - FIXED VERSION
-
 name: facs-comp-analysis
+
 channels:
   - conda-forge
   - bioconda
-  - defaults
+  - nodefaults  # Usa 'nodefaults' invece di 'defaults' per evitare conflitti
+
+pin_subdir: linux-64
 
 dependencies:
-  # === BASE R + ESSENTIALS ===
-  # R 4.3.x is stable and compatible with most Bioconductor packages
-  - r-base=4.3
-  - r-essentials=4.3
+  # === CRITICAL: SYSTEM LIBRARIES - LASCIA RISOLVERE AL SOLVER ===
+  # NON specificare versioni patch, permetti al solver di trovare combinazioni coerenti
+  - libstdcxx-ng>=12.2  # Minimo 12.2 per avere CXXABI_1.3.15
+  - libgcc-ng>=12.2
+  - libgomp>=12.2
+  - sysroot_linux-64>=2.17
+
+  # === BASE R ===
+  - r-base=4.3.*
   
-  # === CORE PACKAGES FOR COMPOSITIONALITY ===
-  # ALDEx2 and dependencies
+  # === DIPENDENZE CRITICHE ESPLICITE ===
+  # Questi pacchetti devono essere specificati PRIMA delle loro dipendenti
+  - r-lattice  # Richiesto da latticeExtra
+  - r-rcolorbrewer  # Richiesto da latticeExtra
+  - r-interp  # Dipendenza critica che causa l'errore
+  - r-latticeextra  # Caricato da ALDEx2
+  
+  # === CORE COMPOSITIONALITY PACKAGES ===
   - bioconductor-aldex2
-  - r-zcompositions  # FIXED: was bioconductor-zcompositions
+  - r-zcompositions
   - r-compositions>=2.0
-  - r-hmisc  # FIXED: was bioconductor-hmisc
-  
-  # DA testing companion (Propeller via speckle)
+  - r-hmisc
+
+  # === PROPELLER (VIA SPECKLE) ===
   - bioconductor-speckle
   - bioconductor-limma
-  
+
   # === BATCH CORRECTION ===
   - bioconductor-sva
-  
+
   # === NETWORK ANALYSIS ===
   - r-igraph>=2.0
   - r-tidygraph
   - r-ggraph
-  
+
   # === CLUSTERING & SURVIVAL ===
   - bioconductor-consensusclusterplus
   - r-survival
   - r-survminer
-  - r-wgcna  # FIXED: was bioconductor-wgcna
-  
-  # === VISUALIZATION & DATA WRANGLING ===
+  - r-wgcna
+
+  # === TIDYVERSE & VISUALIZATION ===
   - r-ggplot2
   - r-dplyr
   - r-tidyr
@@ -48,32 +57,33 @@ dependencies:
   - r-ggpubr
   - r-cowplot
   - r-viridis
-  
+  - r-patchwork  # Utile per composite plots
+
   # === UTILITY PACKAGES ===
   - r-rmarkdown
   - r-knitr
   - r-pheatmap
   - r-reshape2
   - r-data.table
-  
-  # === POWER & STATISTICS ===
+  - r-dt  # Interactive tables
+
+  # === STATISTICS ===
   - r-pwr
   - bioconductor-multtest
-  
+
   # === DEVELOPMENT TOOLS ===
   - git
-  - gcc_linux-64
-  - gfortran_linux-64
+  - make
+  - cmake
   
-  # === BIOCONDUCTOR CORE (needed for some packages) ===
+  # === BIOCONDUCTOR CORE ===
   - bioconductor-biobase
   - bioconductor-biocgenerics
   - bioconductor-s4vectors
   - bioconductor-iranges
   - bioconductor-genomicranges
 
-# Post-installation steps (run in R):
-# > if (!requireNamespace("BiocManager", quietly = TRUE))
-# >     install.packages("BiocManager")
-# > BiocManager::version()  # Should show 3.18 or 3.19
-# > BiocManager::valid()    # Check installation validity
+  # === ADDITIONAL USEFUL PACKAGES ===
+  - r-devtools  # Per installazioni da GitHub se necessario
+  - r-remotes   # Alternative a devtools
+  - pandoc      # Per rendering RMarkdown
