Updated scripts/01_Data_Preparation.R to use Aitchison for knn (impKNNa)

--- a/env/environment.yml
+++ b/env/environment.yml
@@ -44,7 +44,7 @@ dependencies:
   - r-zcompositions           
   - r-compositions>=2.0       
   - r-hmisc                   
-  - r-vim
+  - r-robcompositions
 
   # === PROPELLER (VIA SPECKLE) ===
   - bioconductor-speckle      
