--- a/config/global_params.yml
+++ b/config/global_params.yml
@@ -33,7 +33,7 @@ case_groups: [DS_Duraclone]
 
 marker_selection:
   whitelist: []      
-  blacklist: []       
+  blacklist: ["PD1", "PD1CD4", "PD1CD8", "CD137CD8", "CD137PD1", "CD8"]       
 
 # --- Visuals ---
 colors:
