--- a/env/environment.yml
+++ b/env/environment.yml
@@ -56,6 +56,7 @@ dependencies:
 
   # === DIMENSIONALITY REDUCTION ===
   - bioconductor-pcamethods
+  - bioconductor-mixomics
 
   # === NETWORK ANALYSIS & ROBUST STATISTICS ===
   - r-igraph>=2.0
