changed qc output format

--- a/config/global_params.yml
+++ b/config/global_params.yml
@@ -67,7 +67,6 @@ metadata:
 
 # QC Reporting Configuration
 qc_reporting:
-  # Define marker categories for the QC report columns
   marker_categories:
     CD3_Lineage:
       - "CD3"
@@ -80,37 +79,21 @@ qc_reporting:
       - "CD3KI67EFF"
       - "CD3KI657EMRA"
       - "CD3KI67NAIVE"
+    CD3_PD1_Complex: 
       - "CD3PD1"
       - "CD3PD1KI67"
       - "CD3PD1CM"
       - "CD3PD1EFF"
       - "CD3PD1EMRA"
       - "CD3PD1NAIVE"
-    CD4_Lineage:
-      - "CD4"
-      - "CD4CD28"
-      - "CD4CD137"
-      - "CD4KI67"
-      - "CD4PD1"
-    CD8_Lineage:
-      - "CD8"
-      - "CD8CD28"
-      - "CD8CD137"
-      - "CD8KI67"
-      - "CD8PD1"
-    Tregs:
-      - "TREG"
-      - "RESTING"
-      - "ACTIVE"
-      - "NON-SUPPRESSIVE"
-      - "TREGCD137"
-    Activation_Molecules:
+    CD3_CD28_Complex:
       - "CD3CD28"
       - "CD3CD28KI67"
       - "CD3CD28CM"
       - "CD3CD28EFF"
       - "CD3CD28EMRA"
       - "CD3CD28NAIVE"
+    CD3_CD137_Complex:
       - "CD3CD137"
       - "CD3CD137KI67"
       - "CD3CD137PD1"
@@ -118,6 +101,24 @@ qc_reporting:
       - "CD3CD137EFF"
       - "CD3CD137EMRA"
       - "CD3CD137NAIVE"
+    CD8_Lineage:
+      - "CD8"
+      - "CD8CD28"
+      - "CD8CD137"
+      - "CD8KI67"
+      - "CD8PD1"
+    CD4_Lineage:
+      - "CD4"
+      - "CD4CD28"
+      - "CD4CD137"
+      - "CD4KI67"
+      - "CD4PD1"
+    Tregs:
+      - "TREG"
+      - "RESTING"
+      - "ACTIVE"
+      - "NON-SUPPRESSIVE"
+      - "TREGCD137"
     Myeloid_MDSC:
       - "M-MDSC"
       - "LOX1-PMN-MDSC"
