upd: changed dir structure, added src/05_network_meta_analysis.R

--- a/env/environment.yml
+++ b/env/environment.yml
@@ -38,6 +38,8 @@ dependencies:
   - r-psych
   - r-fdrtool
   - r-networkcomparisontest 
+  - r-ggvenndiagram
+
 
   # === CORE COMPOSITIONALITY PACKAGES ===
   - bioconductor-aldex2       
